# fieldtheory

./: CHANGELOG.md  LICENSE  LICENSE-CODE  LICENSE-DOCS  README.md  domains.yaml  mkdocs.yml  pyproject.toml
docs/: architecture.md  changelog.md  cli.md  index.md
src/fieldtheory/: __init__.py  cli.py  core.py  entropy_table_bridge.py
tests/: test_bridge.py  test_cli.py  test_core.py
